# libs3

./: .gitignore  CMakeLists.txt  ChangeLog  GIT-VERSION-GEN  GNUmakefile  GNUmakefile.mingw  GNUmakefile.osx  INSTALL  LICENSE  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac  doxyfile  globus-s3.pc.in  librgadmin.pc.in  libs3.pc.in  libs3.spec  libs3.spec.in  libs3.txt  test.diff
archlinux/: PKGBUILD
cmake/template/: Config.cmake.in
debian/: changelog  changelog.Debian  control  control.dev  copyright  libs3-4.install  libs3-4.install.in  libs3-dev.install  libs3-dev.install.in  rules
inc/: crypt.h  error_parser.h  libs3.h  md5base64.h  private.h  request.h  request_context.h  response_headers_handler.h  rgadmin.h  simplexml.h  string_buffer.h  util.h
inc/mingw/: pthread.h
inc/mingw/sys/: select.h  utsname.h
mswin/: libs3.def  libs3.sln  libs3.vcxproj  libs3.vcxproj.filters
mswin/include/libxml/: xmlversion.h
mswin/include/openssl/: opensslconf.h
mswin/lib/x64/: libcurl.lib  libeay32.lib  libxml2.lib
mswin/lib/x86/: libcurl.lib  libeay32.lib  libxml2.lib
packaging/debian/globus-s3/debian/: changelog  changelog.in  control  copyright  libglobus-s3-dev.dirs  libglobus-s3-dev.install  rules
packaging/fedora/: globus-s3.spec
pkg-linux/: GNUmakefile  RPM-GPG-KEY-vsm  mock_rpmbuild.sh
src/: acl.c  auth_header.c  bucket.c  bucket.cpp  bucket_metadata.c  crypt.c  curl_request.c  error_parser.c  general.c  libs3.sym  md5base64.c  mingw_functions.c  mingw_s3_functions.c  multipart.c  multipart.cpp  object.c  pool.c  request.c  request.cpp  request_context.c  request_context.cpp  response_headers_handler.c  response_headers_handler.cpp  rgadmin.c  s3.c  service.c  service_access_logging.c  simplexml.c  test.c  testsignature.c  testsimplexml.c  util.c  vla.hpp
test/: goodxml_01.xml  test.sh  testsimplexml.sh
test/signature/: Makefile  README  main.cpp  mock.cpp  sign.py
